--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,28 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Django REST with React</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
+{% extends 'base.html' %}
 
-</head>
-<body>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <div id="game-table">
-        <!-- React will load here -->
-      </div>
-    </div>
-    <div class="col-md-2"></div>
-  </div>
+{% block title %}Django REST with React{% endblock %}
+
+{% block main_content %}
+<div id="game-table">
+  <!-- React will load here -->
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
-</body>
+{% endblock %}
+
+{% block js %}
 {% load static %}
-<script src="{% static "frontend/main.js" %}"></script>
-</html>
+<script src="{% static 'frontend/main.js' %}"></script>
+{% endblock %}
