Changed tab name to MyVideoGameList in index.html

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Django REST with React{% endblock %}
+{% block title %}MyVideoGameList{% endblock %}
 
 {% block main_content %}
 <div id="game-table">
